# DjangoHW

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
HW27/: settings.py  urls.py
ads/: admin.py  models.py  permission.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_ads_location.py  0002_initial.py  0003_alter_ads_price.py  0003_remove_ads_location.py  0003_selection.py  0004_alter_selection_owner.py  0005_alter_selection_owner.py  0006_remove_selection_owner.py  0007_selection_owner.py
ads/urls/: ad_urls.py  cat_urls.py  sel_urls.py
data/: ads.csv  ads.json  categories.csv  categories.json  converter.py  location.csv  location.json  user.csv
tests/: conftest.py  factories.py  fixtures.py
tests/ads_tests/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng_and_more.py  0002_alter_user_birth_date.py  0003_alter_user_birth_date.py  0003_alter_user_location.py  0004_alter_user_location.py  0005_alter_user_location.py  0006_alter_location_name.py  0007_alter_user_age_alter_user_first_name.py
