[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["saros1249 <saros1249@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.3.0"
psycopg2 = "^2.9.5"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
